golang/istio-client-go/nginx/nginx.v1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-v1
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-v1
  labels:
    version: v1
spec:
  selector:
    app: nginx
    version: v1
  ports:
    - name: http-nginx
      protocol: TCP
      port: 80
---
