golang/istio-client-go/nginx/nginx.v2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-v2
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-v2
  namespace: nginx-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-v2
  labels:
    version: v2
spec:
  selector:
    app: nginx
    version: v2
  ports:
    - name: http-nginx
      protocol: TCP
      port: 80
---
