golang/istio-client-go/nginx/nginx.networking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-service
  namespace: nginx-v1
spec:
  http:
  - name: v2
    match:
      - headers:
          version:
            exact: v2
    route:
      - destination:
          host: nginx-service.nginx-v2.svc.cluster.local
  - name: v1-as-default
    route:
      - destination:
          host: nginx-service.nginx-v1.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
  namespace: nginx-v1
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
    - match:
      - uri:
          exact: /
      delegate:
        name: nginx-service
        namespace: nginx-v1

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-v1
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
